fix dropdown: increment z-index for use in dialog
Dialog and dropdown had the same z-index, resulting in the dropdown
appearing below the dialog. By incrementing the z-index of the dropdown,
it's fixed.

--- a/demo/css/lumx.css
+++ b/demo/css/lumx.css
@@ -6055,7 +6055,7 @@ html {
 
 .dropdown-menu {
   position: absolute;
-  z-index: 999;
+  z-index: 1000;
   border-radius: 2px;
   background-color: #FFFFFF;
   text-align: left;
