--- a/scss/main/objects/_objects.dropdown.scss
+++ b/scss/main/objects/_objects.dropdown.scss
@@ -16,7 +16,7 @@
 // Dropdown menu
 .dropdown-menu {
     position: absolute;
-    z-index: 999;
+    z-index: 1000;
     border-radius: $md-base-round;
     background-color: $white;
     text-align: left;
